New proof of equivalence with SU

--- a/Poissons.tex
+++ b/Poissons.tex
@@ -15,13 +15,13 @@
 
 % -----------------------------------------------------------------
 
-\title{Poissons}
+\title{The combinatorics of the permutahedron diagonals}
 
 \author[B. Delcroix-Oger]{B\'er\'enice Delcroix-Oger}
 \address{Institut Montpelliérain Alexander Grothendieck, Université de Montpellier, France}
 \email{berenice.delcroix-oger@umontpellier.fr}
 
-\author[M. Josuat-Vergès]{Matthieu Josuat-Verg\`es}
+\author[M. Josuat-Verg\`es]{Matthieu Josuat-Verg\`es}
 \address{}
 \email{}
 
