--- a/sec/facets.tex
+++ b/sec/facets.tex
@@ -45,13 +45,6 @@ Essential complementary partitions and labelled bipartite trees are in bijection
 \end{proposition}
 \Guillaume{Consider changing notation for functions vs sets}
 
-\begin{figure}
-\begin{center}
-\includegraphics{Images/bijections_example.png}
-\end{center}
-\caption{The bijection between ordered partitions and bipartite trees.}
-\end{figure}
-
 \begin{corollary}[\cite{kajitani1982number}]
 The number of essential complementary partitions is $|\EC_n| = 2(n+1)^{n-2}$.
 \end{corollary}
@@ -113,6 +106,59 @@ Suppose now that $a < b$ and $b < c$.
 Since $p_{ac}= (p_{ab} \cup p_{bc}) \setminus (p_{ab} \cap p_{bc})$, we have $$ I_{ac}=(I_{ab}\cup I_{bc}) \setminus (J_{ab} \cup J_{bc}) \text{ and } J_{ac}=(J_{ab}\cup J_{bc}) \setminus (I_{ab} \cup I_{bc}) \ , $$ and from the condition (\ref{eq:order}) above it is clear that $\min(I_{ac}\cup J_{ac})=\min(I_{ac})$, which completes the proof of the transitivity for the total order on $P_L$. 
 The proof for $P_R$ is similar. 
 \end{proof}
+
+\begin{example}\label{ex:ECbijection}
+We now illustrate the ordering on the essential complementary partition $15|234|6|7 \times 13|2|46|57$. The fact that this is an essential complementary partition is easily visually verified by constructing its bipartite tree, and this tree, on the left, admits the ordering on the right.
+\begin{center}
+\begin{tikzpicture}[scale=.7]  
+\node (1) at (-1.5, -1) {$15$};
+\node (2) at (-1.5, -2) {$234$};
+\node (3) at (-1.5, -3) {$6$};
+\node (4) at (-1.5, -4) {$7$};
+%
+\node (5) at (1.5, -1) {$13$};
+\node (6) at (1.5, -2) {$2$};
+\node (7) at (1.5, -3) {$46$};
+\node (8) at (1.5, -4) {$57$};
+%
+\draw[-] (1)--(5); 
+\draw[-] (1)--(8);
+\draw[-] (2)--(5); 
+\draw[-] (2)--(6); 
+\draw[-] (2)--(7); 
+\draw[-] (3)--(7);
+\draw[-] (4)--(8);
+%
+\end{tikzpicture}
+$\quad$
+\begin{tikzpicture}[scale=.7]  
+\node (1) at (-1.5, -1) {$15$};
+\node (2) at (-1.5, -2) {$7$};
+\node (3) at (-1.5, -3) {$234$};
+\node (4) at (-1.5, -4) {$6$};
+%
+\node (5) at (1.5, -1) {$57$};
+\node (6) at (1.5, -2) {$46$};
+\node (7) at (1.5, -3) {$13$};
+\node (8) at (1.5, -4) {$2$};
+%
+\draw[-] (1)--(5); 
+\draw[-] (1)--(7);
+\draw[-] (2)--(5); 
+\draw[-] (3)--(6); 
+\draw[-] (3)--(7); 
+\draw[-] (3)--(8); 
+\draw[-] (4)--(6);
+%
+\end{tikzpicture}
+\end{center}
+Here are two examples paths providing order information.
+\begin{align*}
+	7 <_L 234 \text{ as } 7 \xrightarrow{7} 57 \xrightarrow{5} 15 \xrightarrow{1=I_*} 13 \xrightarrow{3} 234\\
+	57 <_R 46 \text{ as } 57 \xrightarrow{5} 15 \xrightarrow{1=I_*} 13 \xrightarrow{3} 234 \xrightarrow{4} 46
+\end{align*}
+\end{example}
+
 
 This order far from being arbitrary provides the unique way to order an essential complementary partition pair into an ordered partition pair of $\triangle$, as we shall demonstrate next.
 
@@ -483,6 +529,35 @@ This gives a geometric, alternative proof of the fact that all known diagonals o
 
 \Guillaume{Now we have matrix representation for free!}
 
+\begin{example} \label{ex:shifts}
+The permutation $5714632$ corresponds to the strong complementary pair $(\sigma,\tau) := 5|17|4|236 \times 57|146|3|2$. We now illustrate all possible shifts of this strong complimentary pair. The possible left shifts (indicated by their corresponding critical element, and drawn to avoid crossings) are
+\begin{center}
+\begin{tikzcd}
+& 5|17|4|236 \times \tau \arrow[ld,"p=3"] \arrow[d,"p=1"] \arrow[rd,"p=2"]\\
+5|17|34|26 \times \tau \arrow[rd,"p=1"] \arrow[d,"p=2"]&
+15|7|4|236 \times \tau \arrow[rd,"p=2"] \arrow[d,"p=3"]&
+5|17|24|36 \times \tau \arrow[d,"p=1"]\\
+5|17|234|6 \times \tau \arrow[d,"p=1"]&
+15|7|34|26 \times \tau \arrow[dl,"p=2"]&
+15|17|24|36 \times \tau \\
+15|7|234|6 \times \tau
+\end{tikzcd}
+\end{center}
+The possible right shifts are simply
+\begin{center}
+\begin{tikzcd}
+\sigma \times 57|146|3|2 \arrow[r,"p=1"] & \sigma \times 57|46|13|2 \arrow[r,"p=1"] & 57|46|3|12
+\end{tikzcd}
+\end{center}
+As the left and right shifts can be performed independently we could combine these diagrams.
+No other shifts are possible, observe for instance that we cannot perform the left shift $15|7|234|6 \times 57|46|13|2 \xrightarrow{p=2} 15|27|34|6 \times 57|46|13|2$ as the minimal path connecting $234$ and $7$ contains $1$ which is smaller than $2$ (see example \ref{ex:ECbijection}). The unique way of producing $15|7|234|6 \times 57|146|3|2$ by the second definition of the SU diagonal is given by
+\begin{center}
+\begin{tikzcd}
+5|17|4|236 \times 57|146|3|2 \arrow[r,"{p=\{2,3\}}"] & 5|17|234|6 \times 57|146|3|2 \arrow[r,"{p=\{1\}}"] & 15|7|234|6 \times 57|146|3|2
+\end{tikzcd}
+\end{center}
+This corresponds to combining the top two arrows in the leftmost arrows of the diagram.
+\end{example}
 
 
 \subsection{Comultiplicativity}
