--- a/Poissons.tex
+++ b/Poissons.tex
@@ -18,7 +18,7 @@
 \title{The combinatorics of the permutahedron diagonals}
 
 \author[B. Delcroix-Oger]{B\'er\'enice Delcroix-Oger}
-\address{Institut Montpelliérain Alexander Grothendieck, Université de Montpellier, France}
+\address{Institut Montpelli\'erain Alexander Grothendieck, Universit\'e de Montpellier, France}
 \email{berenice.delcroix-oger@umontpellier.fr}
 
 \author[M. Josuat-Verg\`es]{Matthieu Josuat-Verg\`es}
