--- a/sec/facets.tex
+++ b/sec/facets.tex
@@ -25,10 +25,37 @@ Let us emphasize that the pairs of partitions of $\EC$ are \emph{unordered}.
 
 \Guillaume{Notations to be uniformized from here}
 
-\begin{example}
-n=2, n=3
+\begin{example} 
+For $n=2$, there are two partitions: 
+\begin{itemize}
+\item $\{1\}\{2\}$, whose unique set of distinct representatives is $\{1,2\}$,
+\item and $\{1,2\}$, which admits two sets of distinct representatives $\{1\}$ and $\{2\}$.
+\end{itemize}
+There are two essential complementary partitions among the four pairs of partitions: $(\{1\}\{2\}, \{1, 2\})$ and $(\{1, 2\}, \{1\}\{2\})$, with pairs of distinct representatives respectively $(\{1,2\}, \{1\})$ (or equivalently $(\{1,2\}, \{2\})$) and $(\{1\}, \{1,2\})$ (or equivalently $(\{2\}, \{1,2\})$). 
+The pairs $(\{1,2\}, \{1,2\})$ and $(\{1\}\{2\},\{1\}\{2\})$ are not complementary.
+
+For $n=3$, there are five partitions:
+\begin{itemize}
+\item $\{1\}\{2\}\{3\}$, whose unique set of distinct representatives is $\{1,2,3\}$,
+\item $\{1\}\{2,3\}$, which admits two sets of distinct representatives $\{1,2\}$ and $\{1,3\}$,
+\item $\{2\}\{1,3\}$, which admits two sets of distinct representatives $\{1,2\}$ and $\{2,3\}$,
+\item $\{3\}\{1,2\}$, which admits two sets of distinct representatives $\{1,3\}$ and $\{2,3\}$,
+\item $\{1,2,3\}$, which admits three sets of distinct representatives $\{1\}$, $\{2\}$ and $\{3\}$.
+\end{itemize}
+There are eight essential complementary partitions among the $25$ pairs of partitions:
+\begin{itemize}
+\item $(\{1\}\{2\}\{3\}
+\item 
+\item 
+\item 
+\item 
+\item 
+\item 
+\item 
+\end{itemize}
+The pairs $(\{1\}\{2\}\{3\},\{1\}\{2\}\{3\})$ are not complementary
 \end{example}
-\Kurt{To do}
+\Kurt{To do} \BDO{In progress. Is there too many details ? Don't hesitate to modify / correct the formulation}
 
 A \emph{tree} is a simply connected graph with no cycles. 
 A \emph{bipartite graph} is a graph whose vertices are partitioned into two sets such that vertices in one set are only adjacent to vertices in the other, we say it is \emph{ordered} if one of the sets is considered smaller than the other and we denote the partition $(V_L,V_R)$. 
