--- a/sec/facets.tex
+++ b/sec/facets.tex
@@ -437,7 +437,7 @@ In particular, this provides an alternative proof that all known diagonals on th
 Given any permutation, one can canonically produce a facet of the diagonal in the following way. 
 
 \begin{definition}
-    A pair of ordered partitions $(\sigma,\tau)$ is called \emph{strong complementary} if $\sigma$ is obtained from a permutation by merging the adjacent elements which are descreasing, and $\tau$ is obtained from the same permutation by merging the adjacent elements which are increasing.
+    A pair of ordered partitions $(\sigma,\tau)$ is called \emph{strong complementary} if $\sigma$ is obtained from a permutation by merging the adjacent elements which are decreasing, and $\tau$ is obtained from the same permutation by merging the adjacent elements which are increasing.
 \end{definition}
 
 An example is shown in \cref{fig:strong-complementary}.
