--- a/sec/facets.tex
+++ b/sec/facets.tex
@@ -629,7 +629,7 @@ According to \cref{t:iso-with-SU}, it suffices to show that the symmetry $s$ sen
 
 This allows us to prove a conjecture made in \cite[Remark 3.19]{LA21}.
 
-\begin{corollary}
+\begin{corollary} \label{SU from hyperplane arrangement}
     The Saneblidze--Umble diagonal is given by the following choice of chambers in the fundamental hyperplane arrangement of the permutahedron: any vector $\vec v$ with strictly decreasing coordinates and which satisfy $\sum_{i \in I} v_i > \sum_{j \in J} v_j$ for all $I,J \subset \{1, \ldots, n\}$ such that $I \cap J = \emptyset, |I|=|J| \geq 2$ and $\max(I \cup J) \in I$ induces the Saneblidze--Umble diagonal on the $(n-1)$-dimensional standard permutahedron. 
 \end{corollary}
 
@@ -675,6 +675,114 @@ This corresponds to combining the top two arrows in the leftmost arrows of the d
 
 
 \subsection{Comultiplicativity}
+
+\Kurt{Happy to change any and all notation, or make other alterations!}
+
+\begin{definition}
+Let $D(n) := \{ \{I,J\}:I,J \subset \{1,\dots,n\}, |I|= |J|, I\cap J = \emptyset \}$.
+This is a set of unordered pairs, and we can define total orders on all pairs of the same size as follows. We say $I<J \equiv (I,J)$ if,
+\begin{itemize}
+    \item $\OP : \min(I\cup J) = \min I$
+    \item $SU : \max(I\cup J) = \max I $
+\end{itemize}
+We have refer to the orders in this fashion due to \cite[Theorem 3.16]{LA21} and Corollary \ref{SU from hyperplane arrangement}.
+We will also use $-^{op}$ to refer to the dual of these orders. We say an $\{I,J\}$ pair is of order $k$ if $|I| = |J|=k$. 
+\end{definition}
+
+\begin{definition}
+We say an ordering of $D(n)$ is \textbf{admissible} (with respect to union) if for all ordered $(I,J)$ pairs 
+\begin{align*}
+    (I,J) = (\cup_{a\in A} I_a, \cup_{a \in A} J_a) \iff \forall a \in A, r((I_a, J_a))
+\end{align*}
+where $r$ is the reduction function e.g. $r( (\{5,9,10\},\{6,8,12\})) = (\{1,4,5\},\{2,3,6\})$.
+\end{definition}
+
+\begin{lemma} \label{admissible lemma}
+The $\OP$ and $SU$ orderings are admissible, and are admissible extensions of the following $(I,J)$ pairs
+\begin{itemize}
+    \item ${\OP} :$ for all $k\geq 1$  $(\{1,k+2,k+3,\dots,2k-1,2k\}, \{2,3,\dots,k+1\})$
+    \item ${SU} :$ for all $k\geq 1$  $(\{1,2,3,\dots,k-1,2k\}, \{k+1,k+2,\dots,2k-1\})$
+\end{itemize}
+The dual orders $\OP^{op}$ and $SU^{op}$ are also admissible, and admissible extensions of the dual pairs.
+\end{lemma}
+\begin{proof}
+We present the proof for ${\OP}$, the proof for ${SU}$ proceeds similarly, and the dual proofs are obtained from duality.
+Let $o_k:= (I_k,J_k):= (\{1,k+2,k+3,\dots,2k-1,2k\}, \{2,3,\dots,k+1\})$. It is apparent that $o_k$ is not a union of other $I,J$ pairs as $1$ is the only element of $I_k$ which is smaller than other elements of $J_k$.
+As such, if we tried to decompose it as a union we could pick out one pair $(I_1,J_1)$ such that $\min ( I_1\cup J_1) = \min I_1 = 1$, but the next possible pair must satisfy $\min ( I_2\cup J_2) = \min J_2$ and hence would violate the $\OP$ order.
+\\\\
+For any other $(I,J)$ pair of order $k$ which does not reduce to $o_k$, there exists $i_2 \in I\setminus \min I$ such that $i_2 < \max J$.
+This means every other pair can be decomposed as a union. In particular if our pair is such that $r(I,J)=(\{i_1,\dots,i_k\},\{j_1,\dots,j_k\})$ (each set ordered smallest to largest), then it must be the case that $1=i_1<i_2<j_k$.
+In which case, $(\{i_2\},\{j_k\})$ and $(\{i_1,i_3,\dots,i_k\},\{j_1,\dots,j_{k-1}\})$ are both smaller $(I,J)$ pairs.
+If the pair $(I,J)$ decomposes in another way (i.e. $(I,J) = (\cup_{a\in A} I_a, \cup_{a \in A} J_a)$ in some more complicated union), then the ${\OP}$ order is such that $\forall a \in A, r((I_a, J_a))$, which orders the pair $(I,J)$ in the same fashion.
+\\\\
+Finally, we show that ${\OP}$ is an admissible extension of the $o_k$.
+Observe that in the decomposition of $(\{i_1,\dots,i_k\},\{j_1,\dots,j_k\})$ into $(\{i_2\},\{j_k\})$ and $(\{i_1,i_3,\dots,i_k\},\{j_1,\dots,j_{k-1}\})$, it must be the case that $r((\{i_2\},\{j_k\})) = (\{1\},\{2\})$ and $r((\{i_1,i_3,\dots,i_k\},\{j_1,\dots,j_{k-1}\}))$ is either $o_{k-1}$ or we can repeat this decomposition.
+This repeated decomposition must eventually terminate with the RHS reducing to $o_{j}$ for $1\leq j \leq k-1$.
+As such we can order all $\{I,J\}\in D(n)$ by simply ordering all $o_k$ pairs.
+\end{proof}
+
+
+\begin{lemma}
+The only admissible orderings of $D(n)$ are $\OP,SU,\OP^{op}$ and $SU^{op}$.
+\end{lemma}
+
+\begin{proof}
+We first observe that there are precisely $4$ ways to order the $D(n)$ pairs of size $k\leq 2$ such that the admissible extension of these orders do not collide.
+These are,
+\begin{enumerate}
+    \item $(\{1\},\{2\})$ and $(\{1,4\},\{2,3\})$ which corresponds to $\OP$ i.e. $\min(I\cup J) = \min I$
+    \item $(\{2\},\{1\})$ and $(\{1,4\},\{2,3\})$ which corresponds to $SU$ i.e. $\max(I\cup J) = \max I$
+    \item $(\{2\},\{1\})$ and $(\{2,3\},\{1,4\})$ which corresponds to $\OP^{op}$ i.e. $\min(I\cup J) = \min J$
+    \item $(\{1\},\{2\})$ and $(\{2,3\},\{1,4\})$ which corresponds to $SU^{op}$ i.e. $\max(I\cup J) = \max J$
+\end{enumerate}
+More specifically, we must order the sole reduced $D(n)$ pair of order $1$, $\{\{1\},\{2\}\}$.
+Then once we have ordered this pair, the sole reduced $D(n)$ pair of order $2$ which must be ordered is $\{\{1,4\},\{2,3\} \}$.
+There are clearly $4$ ways to order these two pairs, and we can identify these $I,J$ pairs as cases of Lemma \ref{admissible lemma}.
+\\\\
+We now show that once we have committed to one of these four orders we must follow through with it.
+We will show this through induction for the $\OP$ order, the $SU$ order proceeds similarly, and the dual orders by duality.
+\\\\
+Let $l\geq 2$ and suppose that $\forall k\leq l$ that $\{1,k+2,k+3,\dots,2k-1,2k\} < \{2,3,\dots,k+1\} $.
+Then from Lemma \ref{admissible lemma} we know that the only $\{I,J\}$ pair of order $l+1$ that will not decompose (and hence be specified by admissibility) is 
+$$\{\{1,(l+1)+2,(l+1)+3,\dots,(l+1)k-1,2(l+1)\}, \{2,3,\dots,(l+1)+1\}\}$$
+As such, the only way we can vary from $\OP$ is to order this element in the opposite direction i.e.
+$$\{2,3,\dots,(l+1)+1\} < \{1,(l+1)+2,(l+1)+3,\dots,(l+1)k-1,2(l+1)\} $$
+However, if we make this choice than this leads to contradictions in the ordering of the $\{I,J\}$ pairs of order $l+2$.
+The following contradiction is a generalisation of Example \ref{Non-admissible order contradiction example}.
+Let $m = l+2$ then the pair
+$$\{I,J\}:= \{ \{1,3,m+3,m+4,\dots,2m-1,2m\}, \{2,4,5,\dots,m+2\} \}$$
+can be oriented in both directions.
+In particular $\{I,J\} = \{I_1 \cup I_2, J_1 \cup J_2\} = \{I'_1 \cup I'_2, J'_1 \cup J'_2\}$ where
+\begin{align*}
+    I_1:= \{1,m+3,\dots,2m\} > J_1:= \{4,5,\dots,m+2\} \text{ and } I_2:=\{3\} > J_2:= \{2\}
+\end{align*}
+this decomposition makes use of the (reversed) order $l+1$ case and the (non-reversed) order $1$ case.
+The second decomposition,
+\begin{align*}
+    I'_2:= \{1,m+3,\dots,  2m-1\} < J'_1:= \{2,5,\dots,m+1\} \text{ and } I'_2:=\{3, 2m\} < J'_2:= \{4, m+2\}
+\end{align*}
+makes use of the (non-reversed) order $l$ and $2$ cases.
+\end{proof}
+
+\begin{example} \label{Non-admissible order contradiction example}
+Suppose the $\OP$ order holds for $D(n)$ of order $k\leq 2$ and in order $3$ it is reversed, i.e.
+\begin{align*}
+    \{1\}<\{2\},\quad \{1,4\}< \{2,3\}, \quad \{2, 3, 4\} < \{1, 5, 6 \}
+\end{align*}
+Then $\{I,J\}=\{\{1, 3, 7, 8\}, \{2, 4, 5, 6\}\}$ admits two different orientations.
+In particular, 
+\begin{align*}
+    \{1, 7, 8\} > \{ 4, 5, 6 \} \text{ and } \{3\} > \{2\} &\implies \{1, 3, 7, 8\} >\{2, 4, 5, 6\}\\
+    \{1, 7\}< \{2, 5\} \text{ and } \{3, 8\}< \{4, 6\} &\implies \{1, 3, 7, 8\} <\{2, 4, 5, 6\}
+\end{align*}
+
+\end{example}
+
+\begin{corollary}
+The $\OP$ and $SU$ diagonals (and $\OP^{op}$ and $SU^{op}$) are the only co-multiplicative diagonals on the permutahedra.
+\end{corollary}
+\Kurt{or is the weak Bruhat assumption also needed?}
+\Kurt{probably a bit of extra work to show an isomorphism...}
 
 \Guillaume{Conjectural}
 
